--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   sokoke_planner_api-production:
     container_name: sokoke_planner_api-production
     build:
-      target: production
+      target: prod
       context: .
       args:
         - PORT=${PORT:-4003}
@@ -18,6 +18,7 @@ services:
         reservations:
           cpus: '0.25'
           memory: '2048m'
+    profiles: ["prod"]
 
   sokoke_planner_api-dev:
     container_name: sokoke_planner_api-dev
@@ -55,6 +56,7 @@ services:
         reservations:
           cpus: '0.25'
           memory: '2048m'
+    profiles: ["dev"]
 
 volumes:
   node_modules:
