chore: update dependencies and refactor validation imports
- Updated NestJS dependencies to the latest versions.
- Changed validation imports from '@nestjs/class-validator' to 'class-validator' across multiple DTOs and controllers.
- Added UserModule to the app module.
- Enhanced main.ts to log registered routes and application URL on startup.
- Minor adjustments in user schema to remove unnecessary required property for verifyToken.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,10 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       - NODE_OPTIONS=--max_old_space_size=4096
+      - CHOKIDAR_USEPOLLING=true
+      - MONGODB_URI=mongodb://host.docker.internal:27017/sokokePlanner
     volumes:
-      #- .:/project
+      - .:/project
       - node_modules:/project/node_modules/
     deploy:
       resources:
