--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/class-transformer": "^0.4.0",
-    "@nestjs/class-validator": "^0.13.4",
-    "@nestjs/common": "^11.1.1",
+    "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.1",
+    "@nestjs/core": "^11.1.3",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.1.1",
-    "@nestjs/platform-fastify": "^11.1.1",
+    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/platform-fastify": "^11.1.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "joi": "^17.13.3",
-    "mongoose": "^8.14.3",
+    "mongoose": "^8.16.0",
     "passport": "^0.7.0",
     "passport-headerapikey": "^1.2.2",
     "passport-local": "^1.0.0",
@@ -55,23 +55,23 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
-    "@nestjs/testing": "^11.1.1",
+    "@nestjs/testing": "^11.1.3",
     "@swc/cli": "^0.7.7",
-    "@swc/core": "^1.11.24",
+    "@swc/core": "^1.12.1",
     "@swc/jest": "^0.2.38",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.18",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.3",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^9.26.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "jest": "^29.7.0",
+    "eslint-plugin-prettier": "^5.4.1",
+    "jest": "^30.0.0",
     "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.1",
-    "ts-jest": "^29.3.3",
+    "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
