--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/platform-fastify": "^11.1.3",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "joi": "^17.13.3",
@@ -61,6 +62,7 @@
     "@swc/jest": "^0.2.38",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
