--- a/package.json
+++ b/package.json
@@ -42,12 +42,16 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/platform-fastify": "^11.1.3",
+    "@nestjs/schedule": "^6.0.0",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-headerapikey": "^1.2.2",
     "passport-jwt": "^4.0.1",
@@ -63,11 +67,11 @@
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.12.1",
     "@swc/jest": "^0.2.38",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/passport-jwt": "^4.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
