feat(planner): implement SQL-based DAOs for tasks, features, projects, and users
- Added SQLTaskDAO for task management with CRUD operations.
- Introduced SQLFeatureDAO, SQLProjectDAO, SQLProjectCategoryDAO, SQLProjectSubCategoryDAO, SQLRequerimentDAO, SQLStatusDAO for respective entities.
- Created SQLUserDAO for user management with CRUD operations.
- Updated factories to support SQL DAOs alongside MongoDB.
- Added TypeORM entities for tasks, features, projects, categories, subcategories, requeriments, statuses, and users.
- Enhanced PlannerModule and UserModule to include SQL entities and DAOs.
- Adjusted task service to use updated frontend URL for task links.

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -8,7 +8,7 @@ LOGGER_LEVEL=log
 
 # Database Configuration  
 PERSISTENCE=mongodb
-MONGODB_URI=mongodb://localhost:27017/sokoke_planner
+MONGODB_URI=mongodb://host.docker.internal:27017/sokokePlanner
 
 # Authentication Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
