--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/migrations/data-source.ts",
+    "migration:create": "typeorm-ts-node-commonjs migration:create",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/migrations/data-source.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/migrations/data-source.ts",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d src/migrations/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
@@ -43,6 +48,7 @@
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/platform-fastify": "^11.1.3",
     "@nestjs/schedule": "^6.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
@@ -51,13 +57,17 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
+    "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-headerapikey": "^1.2.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.16.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.24",
     "winston": "^3.17.0"
   },
   "devDependencies": {
